--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,12 +1,14 @@
 <h2>Product Details</h2>
 
 <div *ngIf="product">
+  <img src="{{product.image}}" width="150px"> <br>
   <h3>{{ product.name }}</h3>
-  
   <h4>{{ product.price | currency }}</h4>
   <p>{{ product.description }}</p>
   <p> RATING: {{product.rating}}
   <p>LIKES: {{product.likes}}</p>
-  <button type="submit" click="liked()"> Like </button>
+  <button type="submit" (click)="liked()"> Like </button>
+  
+  <button type="submit" (click)="remove()"> Delete </button>
 
 </div>
