--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,14 +1,16 @@
 <h2>Products</h2>
 
   <div *ngFor="let product of products">
-      <div *ngIf="categorys.id===product.id">
+      <div *ngIf="categorys.id===product.cid">
     <h3>
       <a [title]="product.name + ' details'" [routerLink]="['/products', product.id]">
+        <img src="{{product.image}}" width="100px"> <br>
         {{ product.name }}
+        
       </a>
       
     </h3>
-
+    <p *ngIf="product.likes"> Likes: {{product.likes}} </p>
     <p *ngIf="product.description">
       Description: {{ product.description }}
     </p>
