--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -11,8 +11,8 @@
         
       </h3>
       <p *ngIf="product.likes"> Likes: {{product.likes}} </p>
-      <button type="submit" (click)="liked()"> Like </button>
-      <button type="submit" (click)="remove()"> Delete </button>
+      <button type="submit" (click)="product.likes=liked(product.likes)"> Like </button>
+      <button type="submit" (click)="product.cid=remove()"> Delete </button>
       <p *ngIf="product.description">
         Description: {{ product.description }}
       </p>
